# solana-copy-trading

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: decode.rs
migrations/2025-08-06-055114_create_positions/: up.sql
migrations/2025-08-06-060348_create_trades/: down.sql  up.sql
migrations/2025-08-06-060758_create_position_trades/: down.sql  up.sql
migrations/2025-08-17-095231_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/entities/: mod.rs
src/entities/position/: entity.rs  mod.rs  types.rs
src/entities/trade/: entity.rs  types.rs
src/kernel/: config.rs  mod.rs
src/kernel/cache/: block_hash_cache.rs  mod.rs  position_cache.rs  priority_fee_cache.rs  transaction_cache.rs
src/kernel/clients/: http.rs  mod.rs  rpc_helius.rs
src/kernel/db/: connection.rs
src/kernel/logger/: tracing.rs
src/kernel/utils/: amounts.rs  encoder.rs  lamports.rs  mod.rs  price.rs  status.rs
src/kernel/wallet/: signer.rs
src/modules/: mod.rs
src/modules/builder/: config.rs  mod.rs  program_instruction_builder.rs  program_swap_builder.rs  system_instruction_builder.rs  transaction_builder.rs
src/modules/decoder/: config.rs  mod.rs  program_decoder.rs  transaction_decoder.rs  types.rs
src/modules/sender/: mod.rs  rpc_landing.rs  transaction.rs  types.rs
src/modules/stream/: config.rs  geyser_stream.rs  mod.rs  priority_fee_stream.rs
src/services/: copy_process_service.rs  mod.rs  repository_service.rs  transaction_service.rs
src/services/repositories/: mod.rs  trade_repository_service.rs  (+1 more)
(+9 files in other folders)
