[package]
name = "solana-copy-trade"
version = "0.1.0"
edition = "2024"

[lib]
name = "copy_trade"
path = "src/lib.rs"

[[bin]]
name = "copy-trade"
path = "src/main.rs"

[lints.clippy]
all = "deny"

[dependencies]
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = { version = "9.0.0", features = ["tonic"] }

anyhow = "1.0.98"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2.3"


diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"


thiserror = "2.0.16"
tokio = "1.46.1"
base64 = "0.22.1"
bs58 = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
reqwest = "0.12.22"
bincode = "1.3.3"
futures = "0.3.31"
rand = "0.9.2"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "7.0.0-rc2"
rust_decimal = { version = "1.37.2", features = ["db-diesel2-postgres"] }


solana-sdk = "2.3.1"
solana-client = "2.3.6"


spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode"
harness = false
